feature: add logo navigation

--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="logo">
-        <img src="assets/images/core/logo-hit-branco.png" alt="">
+        <img routerLink="''" src="assets/images/core/logo-hit-branco.png" alt="">
     </section>
     <section class="navbar">
         <hit-navbar></hit-navbar>
