fix: add anchor to logo navigation

--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,6 +1,8 @@
 <main>
     <section class="logo">
-        <img routerLink="''" src="assets/images/core/logo-hit-branco.png" alt="">
+        <a routerLink="">
+            <img src="assets/images/core/logo-hit-branco.png" alt="">
+        </a>
     </section>
     <section class="navbar">
         <hit-navbar></hit-navbar>
