--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -10,5 +10,6 @@
         display: flex;
         justify-content: center;
         padding: 100px 20px 60px;
+        text-decoration: none;
     }
 }
